# dot-to-dot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/dot_to_dot/: batch.py  cli.py  contour.py  pdf_builder.py  preprocessing.py  renderer.py  sampling.py
tests/: test_contour.py  test_pdf.py  test_preprocessing.py  test_renderer.py  test_sampling.py
